--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     "org.springframework:spring-web:$springVersion",
     "org.springframework:spring-orm:$springVersion",
     "org.springframework:spring-webmvc:$springVersion",
-    "com.fasterxml.jackson.core:jackson-databind:2.5.1"
+    "com.fasterxml.jackson.core:jackson-databind:2.5.1",
+    "org.hibernate:hibernate-validator:5.4.0.Final"
   )
 }
 
