--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <filter>
+        <filter-name>forRESTful</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>forRESTful</filter-name>
+        <servlet-name>miniblog</servlet-name>
+    </filter-mapping>
+
     <!-- 配置 spring 的 root application context (parent) -->
     <!-- 在 spring mvc 中，这个配置是可选的 -->
     <!-- 在这个 IOC 容器里，主要配置一些全局的东西 -->
