--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,8 @@ dependencies {
     "org.springframework:spring-orm:$springVersion",
     "org.springframework:spring-webmvc:$springVersion",
     "com.fasterxml.jackson.core:jackson-databind:2.5.1",
-    "org.hibernate:hibernate-validator:5.4.0.Final"
+    "org.hibernate:hibernate-validator:5.4.0.Final",
+    "cglib:cglib:3.2.4"
   )
 }
 
