--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,45 +4,63 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <!-- 让表单支持 put/delete 等方法 -->
     <filter>
-        <filter-name>forRESTful</filter-name>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>forRESTful</filter-name>
-        <servlet-name>miniblog</servlet-name>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
+        <servlet-name>mvc</servlet-name>
     </filter-mapping>
 
-    <!-- 配置 spring 的 root application context (parent) -->
-    <!-- 在 spring mvc 中，这个配置是可选的 -->
-    <!-- 在这个 IOC 容器里，主要配置一些全局的东西 -->
-    <!-- 比如 dao/service 的依赖，声明式事务之类 -->
+
+    <!-- 统一使用 UTF-8 编码 -->
+    <filter>
+        <filter-name>encodeFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodeFilter</filter-name>
+        <servlet-name>mvc</servlet-name>
+    </filter-mapping>
+
+
+    <!-- root context -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <!-- 配置路径，默认是 "WEB-INF/applicationContext.xml" -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring-root.xml</param-value>
+        <param-value>classpath:spring/spring.xml</param-value>
     </context-param>
 
-    <!-- 配置 SpringMVC 的 DispatcherServlet  context (child) -->
-    <!-- 这个必须要配置，它的父容器是 上面的那个 -->
+
+    <!-- mvc context -->
     <servlet>
-        <servlet-name>miniblog</servlet-name>
+        <servlet-name>mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <!-- 指定配置文件路径，可选 -->
-        <!-- 默认文件是 "WEB-INF/miniblog-dispatcher.xml" -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-miniblog.xml</param-value>
+            <param-value>classpath:spring/spring-mvc.xml</param-value>
         </init-param>
-        <!-- 可以指定 tomcat 启动的时候，自动初始化 DispatcherServlet -->
-        <!-- 如果没有这个配置，会在第一次访问的时候才会去创建 -->
         <load-on-startup>1</load-on-startup>
+        <multipart-config>
+            <max-file-size>5242880</max-file-size>
+            <max-request-size>10485760</max-request-size>
+            <file-size-threshold>0</file-size-threshold>
+        </multipart-config>
     </servlet>
     <servlet-mapping>
-        <servlet-name>miniblog</servlet-name>
+        <servlet-name>mvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
