--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -2,6 +2,6 @@ mail.host = smtp.qq.com
 mail.port = 465
 mail.from = 403797678@qq.com
 mail.username = 403797678
-mail.password = pysqadkzakwfbjhb
+mail.password = pysqadkzakwfbjha
 
 mail.debug = true
